outputs/tsp_constructive-constructive/2025-12-21_21-29-06/evaluations/problem_eval-4548145218850136886_stdout.txt
Traceback (most recent call last):
  File "C:\Users\pc\Downloads\EvolutionaryComputation\MCTS-AHD-master/problems/tsp_constructive/eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "C:\Users\pc\Downloads\EvolutionaryComputation\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 4
    {The algorithm selects the next unvisited node by primarily minimizing immediate travel distance, multiplicatively penalized by a dynamically weighted factor based on the candidate node's distance back to the starting point, and additionally incurring an additive penalty for choices that isolate remaining unvisited nodes far from the destination.}
                                                                                                                                                                                             ^
SyntaxError: unterminated string literal (detected at line 4)

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "C:\Users\pc\Downloads\EvolutionaryComputation\MCTS-AHD-master/problems/tsp_constructive/eval.py", line 13, in <module>
    from gpt import select_next_node
  File "C:\Users\pc\Downloads\EvolutionaryComputation\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 4
    {The algorithm selects the next unvisited node by primarily minimizing immediate travel distance, multiplicatively penalized by a dynamically weighted factor based on the candidate node's distance back to the starting point, and additionally incurring an additive penalty for choices that isolate remaining unvisited nodes far from the destination.}
                                                                                                                                                                                             ^
SyntaxError: unterminated string literal (detected at line 4)
